@@ -15,6 +15,7 @@
 package pipeline
 
 import (
+	"log"
 	"strconv"
 	"strings"
 	"sync"
@@ -94,7 +95,8 @@ func StatAccumInputSpec(c gs.Context) {
 			}
 
 			ith.MockInputRunner.EXPECT().InChan().Return(ith.PackSupply)
-			ith.MockInputRunner.EXPECT().Name().Return("StatAccumInput").AnyTimes()
+			// Need one of these for every Inject
+			ith.MockInputRunner.EXPECT().Name().Return("StatAccumInput")
 
 			injectCall := ith.MockInputRunner.EXPECT().Inject(ith.Pack)
 			var injectCalled sync.WaitGroup
@@ -131,9 +133,26 @@ func StatAccumInputSpec(c gs.Context) {
 					}
 				}
 
+				drainStats := func() {
+					ok := true
+					for ok {
+						if len(statAccumInput.statChan) > 0 {
+							time.Sleep(100 * time.Millisecond)
+						} else {
+							ok = false
+						}
+					}
+				}
+
 				validateValueAtKey := func(msg *message.Message, key string, value interface{}) {
 					fieldValue, ok := msg.GetFieldValue(key)
+					if !ok {
+						log.Printf("%s field is missing from the message\n", key)
+					}
 					c.Expect(ok, gs.IsTrue)
+					if fieldValue != value {
+						log.Printf("%s should be %v is %v\n", key, value, fieldValue)
+					}
 					c.Expect(fieldValue, gs.Equals, value)
 				}
 
@@ -203,15 +222,17 @@ func StatAccumInputSpec(c gs.Context) {
 
 				c.Specify("emits proper idle stats", func() {
 					startInput()
+					inputStarted.Wait()
 					sendGauge("sample.gauge", 1, 2)
 					sendCounter("sample.cnt", 1, 2, 3, 4, 5)
 					sendTimer("sample.timer", 10, 10, 20, 20)
-					inputStarted.Wait()
+					drainStats()
 					tickChan <- time.Now()
 
 					injectCalled.Wait()
 					ith.Pack.Recycle(nil)
 					ith.PackSupply <- ith.Pack
+					ith.MockInputRunner.EXPECT().Name().Return("StatAccumInput")
 					ith.MockInputRunner.EXPECT().Inject(ith.Pack)
 
 					msg, err := finalizeSendingStats()
@@ -225,19 +246,22 @@ func StatAccumInputSpec(c gs.Context) {
 				c.Specify("omits idle stats", func() {
 					config.DeleteIdleStats = true
 					err := statAccumInput.Init(config)
-					c.Expect(err, gs.IsNil)
+					c.Assume(err, gs.IsNil)
 
 					startInput()
+					inputStarted.Wait() // Can't flush until the input has started.
 					sendGauge("sample.gauge", 1, 2)
 					sendCounter("sample.cnt", 1, 2, 3, 4, 5)
 					sendTimer("sample.timer", 10, 10, 20, 20)
-					inputStarted.Wait() // Can't flush until the input has started.
+					drainStats()
 					tickChan <- time.Now()
 					injectCalled.Wait()
 
 					sendTimer("sample2.timer", 10, 20)
+					drainStats()
 					ith.Pack.Recycle(nil)
 					ith.PackSupply <- ith.Pack
+					ith.MockInputRunner.EXPECT().Name().Return("StatAccumInput")
 					ith.MockInputRunner.EXPECT().Inject(ith.Pack)
 					msg, err := finalizeSendingStats()
 					c.Assume(err, gs.IsNil)
@@ -379,6 +403,7 @@ func StatAccumInputSpec(c gs.Context) {
 
 					// Prep pack and EXPECTS for the close.
 					ith.PackSupply <- ith.Pack
+					ith.MockInputRunner.EXPECT().Name().Return("StatAccumInput")
 					ith.MockInputRunner.EXPECT().Inject(ith.Pack)
 
 					close(statAccumInput.statChan)
