@@ -107,22 +107,27 @@ func FileOutputSpec(c gs.Context) {
 			})
 		})
 
-		c.Specify("tests rotation of files", func() {
+		c.Specify("rotates files correctly", func() {
 			config.Path = "%Y-%m-%d"
+			config.RotationInterval = 24
 			rotateChan := make(chan time.Time)
 			closingChan := make(chan struct{})
 
 			err := fileOutput.Init(config)
-			defer fileOutput.file.Close()
-
 			c.Assume(err, gs.IsNil)
+
+			defer fileOutput.file.Close()
 
 			fileOutput.rotateChan = rotateChan
 			fileOutput.closing = closingChan
 
 			fileOutput.startRotateNotifier()
 
-			go fileOutput.committer(oth.MockOutputRunner, errChan)
+			committerChan := make(chan struct{})
+			go func() {
+				fileOutput.committer(oth.MockOutputRunner, errChan)
+				close(committerChan)
+			}()
 
 			c.Assume(fileOutput.path, gs.Equals, time.Now().Format("2006-01-02"))
 
@@ -130,11 +135,12 @@ func FileOutputSpec(c gs.Context) {
 			futureNow := time.Now().Add(futureDuration)
 
 			rotateChan <- futureNow
+			close(inChan)
+			close(fileOutput.batchChan)
+			<-committerChan
 
 			c.Assume(fileOutput.path, gs.Equals, futureNow.Format("2006-01-02"))
 
-			close(inChan)
-			close(fileOutput.batchChan)
 		})
 
 		c.Specify("processes incoming messages", func() {
@@ -256,6 +262,7 @@ func FileOutputSpec(c gs.Context) {
 			timerChan := make(chan time.Time)
 
 			msg2 := pipeline_ts.GetTestMessage()
+			msg2.SetPayload("MESSAGE 2")
 			pack2 := NewPipelinePack(pConfig.InputRecycleChan())
 			pack2.Message = msg2
 
@@ -299,24 +306,26 @@ func FileOutputSpec(c gs.Context) {
 				defer cleanUp()
 				inChan <- pack
 
+				after := time.After(100 * time.Millisecond)
 				select {
 				case <-fileOutput.batchChan:
 					c.Expect("", gs.Equals, "fileOutput.batchChan should NOT have fired yet")
-				default:
+				case <-after:
 				}
 
 				timerChan <- time.Now()
+				after = time.After(100 * time.Millisecond)
 				select {
 				case <-fileOutput.batchChan:
 					c.Expect("", gs.Equals, "fileOutput.batchChan should NOT have fired yet")
-				default:
+				case <-after:
 				}
 
+				after = time.After(100 * time.Millisecond)
 				inChan <- pack2
-				runtime.Gosched()
 				select {
 				case <-fileOutput.batchChan:
-				default:
+				case <-after:
 					c.Expect("", gs.Equals, "fileOutput.batchChan SHOULD have fired by now")
 				}
 			})
@@ -329,18 +338,19 @@ func FileOutputSpec(c gs.Context) {
 				defer cleanUp()
 				inChan <- pack
 
+				after := time.After(100 * time.Millisecond)
 				select {
 				case <-fileOutput.batchChan:
 					c.Expect("", gs.Equals, "fileOutput.batchChan should NOT have fired yet")
-				default:
+				case <-after:
 				}
 
 				c.Specify("when interval triggers first", func() {
 					timerChan <- time.Now()
-					runtime.Gosched()
+					after = time.After(100 * time.Millisecond)
 					select {
 					case <-fileOutput.batchChan:
-					default:
+					case <-after:
 						c.Expect("", gs.Equals, "fileOutput.batchChan SHOULD have fired by now")
 					}
 				})
@@ -349,10 +359,10 @@ func FileOutputSpec(c gs.Context) {
 					out, err := encoder.Encode(pack2)
 					oth.MockOutputRunner.EXPECT().Encode(gomock.Any()).Return(out, err)
 					inChan <- pack2
-					runtime.Gosched()
+					after = time.After(100 * time.Millisecond)
 					select {
 					case <-fileOutput.batchChan:
-					default:
+					case <-after:
 						c.Expect("", gs.Equals, "fileOutput.batchChan SHOULD have fired by now")
 					}
 				})
