@@ -31,6 +31,9 @@ Bug Handling
 * Fixed bug where a SandboxInput configured with a `ticker_interval` would
   get stuck in an infinite loop on shutdown (#1705).
 
+* Changes in StatAccumInput and FileOutput tests to minimize intermittent
+  Travis failures.
+
 0.10.0b1 (2015-08-07)
 =====================
 
